--- a/style.css
+++ b/style.css
@@ -99,3 +99,42 @@ body {
     padding: 20px;
   }
   
+  /* Media queries */
+@media screen and (max-width: 600px) {
+    /* Styles for small screens */
+    header {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    header nav {
+      display: none;
+    }
+    .toggle-button {
+      display: block;
+    }
+  }
+  
+  @media screen and (min-width: 601px) and (max-width: 900px) {
+    /* Styles for medium screens */
+    header nav li {
+      display: inline-block;
+    }
+    main {
+      max-width: 600px;
+    }
+  }
+  
+  @media screen and (min-width: 901px) {
+    /* Styles for large screens */
+    header nav li {
+      display: inline-block;
+    }
+    main {
+      max-width: 800px;
+    }
+  }
+  
+  
+  
+  
+  
